Fix minor layout issues on small devices

--- a/css/main.scss
+++ b/css/main.scss
@@ -60,16 +60,39 @@ $on-laptop: 800px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left;
-
-    min-height: 28rem;
 }
 
-.text-7vh {
-    font-size: 7vh;
+.text-break {
+    overflow-wrap: break-word;
+    word-break: break-word;
+}
+
+@media screen and (min-width: 421px) {
+    #top {
+        min-height: 28rem;
+    }
+}
+  
+@media screen and (max-width: 420px) {
+    #top {
+        min-height: 20rem;
+    }
 }
 
 .text-2_5vh {
     font-size: 2.5vh;
+}
+
+@media screen and (min-width: 421px) {
+    .text-7vh {
+        font-size: 7vh;
+    }
+}
+  
+@media screen and (max-width: 420px) {
+    .text-7vh {
+        font-size: 5vh;
+    }
 }
 
 .text-lightcyan {
